--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:entries="@array/spinner_data"/>
-
         <Button
             android:id="@+id/oval"
             android:layout_width="10dp"
@@ -69,14 +68,33 @@
             android:text="已连接"/>
     </LinearLayout>
 
-    <Button
-        android:id="@+id/button_save"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_margin="15dp"
-        android:text="保存信息"
-        android:background="@drawable/btn_selector"/>
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="15dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="自动登录:"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="40dp"
+            android:textSize="16sp"/>
+        <Switch
+            android:id="@+id/mySwitch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:textOff=""
+            android:textOn=""
+            android:switchMinWidth="20dp"
+            android:thumb="@drawable/thumb"
+            android:track="@drawable/track"
+            />
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/button_start"
