--- a/app/src/main/res/layout/activity_other.xml
+++ b/app/src/main/res/layout/activity_other.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="当前版本：1.1测试版"
+        android:text="当前版本：1.2-beta"
         android:gravity="center"
         android:layout_marginTop="20dp"
         android:padding="10dp"
