--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,10 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="pers.jxnu.maguozhuang.jxnuwirelessnethelper.LoginActivity">
+    <pers.jxnu.maguozhuang.jxnuwirelessnethelper.MyEditText
+        android:id="@+id/edit_username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:lines="1"
+        android:inputType="number"
+        android:hint="账号"
+        android:drawableLeft="@drawable/acount"
+        android:drawablePadding="10dp"
+        android:layout_margin="20dp"
+        android:paddingLeft="10dp"
+        android:maxLength="20"
+        app:deleteImg="@drawable/clear"/>
 
-</android.support.constraint.ConstraintLayout>
+    <pers.jxnu.maguozhuang.jxnuwirelessnethelper.MyEditText
+        android:id="@+id/edit_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="密码"
+        android:drawableLeft="@drawable/key"
+        android:drawablePadding="10dp"
+        android:lines="1"
+        android:inputType="textPassword"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+        android:paddingLeft="10dp"
+        app:deleteImg="@drawable/clear"/>
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:entries="@array/spinner_data"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="15dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="自动登录:"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="40dp"
+            android:textSize="16sp"/>
+        <Switch
+            android:id="@+id/mySwitch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:textOff=""
+            android:textOn=""
+            android:switchMinWidth="20dp"
+            android:thumb="@drawable/thumb"
+            android:track="@drawable/track"
+            />
+    </LinearLayout>
+</LinearLayout>
