--- a/app/src/main/res/anim/activity_open.xml
+++ b/app/src/main/res/anim/activity_open.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <alpha
-        android:duration="200"
-        android:fromAlpha="0.0"
-        android:toAlpha="1.0" />
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="500">
+    <scale android:fromXScale="0"
+           android:fromYScale="0"
+           android:toXScale="1"
+           android:toYScale="1"
+           android:pivotX="1%"
+           android:pivotY="1%"/>
+    <alpha android:fromAlpha="0"
+           android:toAlpha="1"/>
 </set>
