--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,11 +32,11 @@
             android:layout_width="match_parent"
             android:layout_height="140dp">
             <TextView
+                android:id="@+id/textView_announcement"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:text="@string/announcement"/>
+                android:paddingRight="10dp"/>
         </ScrollView>
     </LinearLayout>
     <LinearLayout
